# LibreOfficeSDKExample

./: .clang-format  .gitignore  CMakeLists.txt  README.md  allinone.sh  do_setsdkenv_unix.sh
DevelopersGuide/Drawing/: Organigram.cpp  PresentationDemo.cpp
DevelopersGuide/FirstSteps/: FirstLoadComponent.cpp
DevelopersGuide/OfficeDev/: CMakeLists.txt
DevelopersGuide/OfficeDev/DesktopEnvironment/: Desk.cpp
DevelopersGuide/ProfUNO/: UrlResolver.cpp
examples/DevelopersGuide/Drawing/: Organigram.cpp  PresentationDemo.cpp
examples/DevelopersGuide/FirstSteps/: FirstLoadComponent.cpp
examples/DevelopersGuide/OfficeDev/DesktopEnvironment/: CMakeLists.txt  Desk.cpp
examples/DevelopersGuide/ProfUNO/: UrlResolver.cpp
examples/cpp/Draw/: CMakeLists.txt
extras/: CMakeLists.txt  show_slides.cpp
impress/: CMakeLists.txt  show_slides.cpp
include/: libreoffice.hpp
presentation/: CMakeLists.txt  load_then_close.cpp
src/: CMakeLists.txt  srvnm.cpp
src/DevelopersGuide/Drawing/: CMakeLists.txt  Organigram.cpp  PresentationDemo.cpp
src/DevelopersGuide/FirstSteps/: FirstLoadComponent.cpp
src/DevelopersGuide/ProfUNO/: UrlResolver.cpp
src/utilities/: CMakeLists.txt
utilities/: srvnm.cpp
